<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activity.RegistrationActivity">


    <ImageView
        android:id="@+id/imageViewLogoUnisannio"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/logo_unisannio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/desc_unisannio" />

    <ImageView
        android:id="@+id/imageViewLogoKasteca"
        android:layout_width="350dp"
        android:layout_height="97dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/logo_kasteca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/desc_kasteca" />

    <Switch
        android:id="@+id/switchDocenteStudente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="116dp"
        android:text="@string/Docente_Studente_Switch_Text"
        android:textColor="@color/colorGeneralText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogoKasteca" />

    <EditText
        android:id="@+id/editTextNome"
        tools:ignore="Autofill"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/Name_Text"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorGeneralText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchDocenteStudente" />

    <EditText
        android:id="@+id/editTextCognome"
        tools:ignore="Autofill"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/Surname_Text"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorGeneralText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

    <EditText
        android:id="@+id/editTextEmail"
        tools:ignore="Autofill"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/Email_text"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorGeneralText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCognome" />

    <EditText
        android:id="@+id/editTextPassword"
        tools:ignore="Autofill"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/Password_text"
        android:inputType="textPassword"
        android:textColor="@color/colorGeneralText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextMatricola"
        tools:ignore="Autofill"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/Matricola_Text"
        android:inputType="text"
        android:textColor="@color/colorGeneralText"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorButton"
        android:onClick="CreateNewAccount"
        android:text="@string/Create_Account_Text"
        android:textColor="@color/colorGeneralText"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMatricola" />

    <TextView
        android:id="@+id/textViewAccountAlreadyExists"
        android:layout_width="184dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/Already_A_Member_Text"
        android:textColor="@color/colorWhiteRed"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreateAccount" />


</androidx.constraintlayout.widget.ConstraintLayout>