...
    <string name="Password_text">Password</string>
    <string name="Login_text">LOGIN</string>
    <string name="Create_New_Account_Text">Non hai ancora un account? Creane uno</string>
    <string name="Insert_correct_data">Perfavore, inserisci i dati corretti</string>
    <string name="Try_Again">Perfavore, riprova</string>
    <string name="Login_Failed">Login fallito</string>
    <string name="Dialog_neutral_button_login_failed">OK</string>
    <string name="Login_Successful">Login eseguito con successo!</string>
    <string name="desc_unisannio">Logo Unisannio</string>
    <string name="desc_kasteca">Logo app</string>

    <!-- stringhe per la RegistrationActivity -->
    <string name="Registration_Failed">Registrazione fallita</string>
...
